# glmassistant

./: .gitignore  CMakeLists.txt  glmclient.cpp  glmclient.h  main.cpp  mainwindow.cpp  mainwindow.h
docs/: ARCHITECTURE.md  INTERVIEW.md  PRD.md  REGRESSION.md
forms/: chatwidget.ui  debugview.ui  parampanel.ui  settingsdialog.ui
src/agent/: AgentController.cpp  AgentController.h  CalculatorTool.cpp  CalculatorTool.h  ITool.h  TimeTool.h  ToolRegistry.cpp  ToolRegistry.h
src/app/: ChatController.cpp  ChatController.h  ChatModel.cpp  ChatModel.h  DebugController.cpp  DebugController.h  SessionManager.cpp  SessionManager.h
src/core/: ILlmProvider.h  LlmReply.h  LlmTypes.cpp  LlmTypes.h  ProviderRegistry.cpp  ProviderRegistry.h
src/data/: DatabaseManager.cpp  DatabaseManager.h
src/infrastructure/: Constants.h  Error.h  Logger.cpp  Logger.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.cpp  ThemeManager.h
src/middleware/: ContextTruncationMiddleware.h  IMiddleware.h  LoggingMiddleware.h  MiddlewarePipeline.cpp  MiddlewarePipeline.h  TokenCounterMiddleware.h
src/network/: HttpClient.cpp  HttpClient.h  SseParser.cpp  SseParser.h
src/providers/: CachingProvider.cpp  CachingProvider.h  GlmProvider.cpp  GlmProvider.h  OllamaProvider.cpp  OllamaProvider.h
src/providers/common/: ProviderUtils.cpp  ProviderUtils.h
src/rag/: GlmEmbeddingProvider.cpp  GlmEmbeddingProvider.h  IEmbeddingProvider.h  RetrievalTool.cpp  RetrievalTool.h  VectorStore.cpp  VectorStore.h
src/ui/: ChatWidget.cpp  ChatWidget.h  DebugView.cpp  DebugView.h  MarkdownRenderer.cpp  MarkdownRenderer.h  ParamPanel.cpp  ParamPanel.h  SettingsDialog.cpp  SettingsDialog.h
tests/: tst_sseparser.cpp
